force-app/main/default/objects/Bulk_Upload_Donations__c/Bulk_Upload_Donations__c.object-meta.xml
<CustomObject>
    <label>Bulk Upload Donations</label>
    <nameField>
        <label>Bulk Upload Donations Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bulk Upload Donations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>