force-app/main/default/objects/Bulk_Upload_Donations__c/fields/Donation_Count__c.field-meta.xml
<CustomField>
    <fullName>Donation_Count__c</fullName>
    <label>Donation Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>