force-app/main/default/objects/Bulk_Upload_Donations__c/fields/Error_Reason__c.field-meta.xml
<CustomField>
    <fullName>Error_Reason__c</fullName>
    <label>Error Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>