force-app/main/default/objects/Bulk_Upload_Donations__c/fields/Total_Allocations_Failed__c.field-meta.xml
<CustomField>
    <fullName>Total_Allocations_Failed__c</fullName>
    <label>Total Allocations Failed</label>
    <summaryFilterItems>
        <field>Bulk_Upload_Data__c.Is_Allocation_Processed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Bulk_Upload_Data__c.File_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>