force-app/main/default/objects/Bulk_Upload_Donations__c/fields/Total_Donation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Donation_Amount__c</fullName>
    <label>Total Donation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>