force-app/main/default/objects/Bulk_Upload_Donations__c/fields/Total_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments__c</fullName>
    <label>Total Payments</label>
    <summaryFilterItems>
        <field>Bulk_Upload_Data__c.Is_Payment_Processed__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Bulk_Upload_Data__c.File_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>