force-app/main/default/objects/Bulk_Upload_Donations__c/fields/Total_Row_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Row_Count__c</fullName>
    <label>Total Row Count</label>
    <summaryForeignKey>Bulk_Upload_Data__c.File_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>