force-app/main/default/objects/Bulk_Upload_Donations__c/fields/Upload_File_Type__c.field-meta.xml
<CustomField>
    <fullName>Upload_File_Type__c</fullName>
    <label>Upload File Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>