force-app/main/default/objects/Bulk_Upload_Donations__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Status__c</columns>
    <columns>Total_Donation_Amount__c</columns>
    <columns>Total_Rows__c</columns>
    <columns>Upload_File_Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>