force-app/main/default/objects/Bulk_Upload_Donations__c/listViews/Bulk_Upload_Today.listView-meta.xml
<ListView>
    <fullName>Bulk_Upload_Today</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Status__c</columns>
    <columns>Total_Donation_Amount__c</columns>
    <columns>Total_Rows__c</columns>
    <columns>Upload_File_Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Bulk Upload - Today</label>
</ListView>